test/compiler/invalid_programs/syntax/non_type_for_arguments.jm
#!TypeError

T = 2

def foo(a:T)
end
